buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
    }
}

plugins {
    id 'org.javamodularity.moduleplugin' version '1.8.12' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.javamodularity.moduleplugin'

    java {
        modularity.inferModulePath = true
    }

    sourceCompatibility = 21
    targetCompatibility = 21

    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'

    repositories {
        mavenCentral()
        mavenLocal()

        flatDir {
            dirs project(':intervalmusiccompositor.build').file('flat_repository')
        }
    }

    dependencies {
        testImplementation(platform('org.junit:junit-bom:5.12.1'))
        testImplementation('org.junit.jupiter:junit-jupiter')
        testRuntimeOnly('org.junit.platform:junit-platform-launcher')

        testImplementation 'org.mockito:mockito-core:5.16.1'
    }

    afterEvaluate {
        repositories {
            mavenCentral()
        }

    }
}






